# EmbersX

./: .gitignore  CMakeLists.txt  README.md  ShaderBinaries.h  build_shaders.bat  encode_shaders.go
LyricMidi/: CMakeLists.txt
LyricMidi/Private/: LyricMidi.cpp  MidiBuffer.cpp  MidiEvent.cpp  MidiFile.cpp  MidiLane.cpp  MidiMap.cpp  MidiTrack.cpp  MidiUtils.cpp
LyricMidi/Public/: LyricMidi.h  MidiBuffer.h  MidiEvent.h  MidiFile.h  MidiLane.h  MidiMap.h  MidiTrack.h  MidiTypes.h  MidiUtils.h
LyricMidiPlayer/: .gitignore  CMakeLists.txt  README.md  ShaderBinaries.h  VulkanizedEngine.hpp  build_shaders.bat  main.cpp  utils.hpp  vdeleter.hpp
LyricMidiPlayer/shaders/: shader_base.frag
MidiDev/: CMakeLists.txt  ColorConstants.h  Gdi.h  PixelBuffer.h  PngTest.h  main.cpp  portable-file-dialogs.h
shaders/: shader_base.frag  shader_base.vert
